# educore

./: .env  .env.example  .gitattributes  .gitignore  .graphifyignore  .ignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  deny.toml
.githooks/: post-commit
.github/workflows/: ci.yml
.graphify/: RECONCILE-PREP-REPORT.md
.opencode/plugins/: graphify.js
crates/academic/: Cargo.toml
crates/academic/src/: lib.rs
crates/adapters/auth/: Cargo.toml
crates/adapters/auth/src/: api_key.rs  errors.rs  jwt.rs  lib.rs  local_password.rs  oauth2.rs  oauth_store.rs  port.rs  rate_limit.rs  saml.rs  services.rs
crates/adapters/auth/tests/: auth_integration.rs
crates/adapters/event-bus/: Cargo.toml  README.md
crates/adapters/event-bus/src/: errors.rs  in_process.rs  lib.rs  nats.rs  redis.rs
crates/adapters/event-bus/tests/: in_process_e2e.rs
crates/adapters/files/: Cargo.toml
crates/adapters/files/src/: errors.rs  lib.rs  lifecycle.rs  local.rs  policy.rs  port.rs  s3.rs  services.rs
crates/adapters/files/tests/: cross_tenant.rs  files_integration.rs  policy_e2e.rs
crates/adapters/integrations/: Cargo.toml
crates/adapters/integrations/src/: errors.rs  lib.rs  lms.rs  oauth2.rs  polling.rs  port.rs  reliability.rs  services.rs  video.rs  webhook_out.rs
crates/adapters/integrations/tests/: integrations_integration.rs  reliability_e2e.rs
crates/adapters/notify/: Cargo.toml
crates/adapters/notify/src/: email.rs  errors.rs  lib.rs  port.rs  push.rs  reliability.rs  services.rs  sms.rs
crates/adapters/notify/tests/: notify_integration.rs  reliability_e2e.rs
crates/adapters/payment/: Cargo.toml
crates/adapters/payment/src/: errors.rs  lib.rs  port.rs  services.rs  stripe.rs  webhook_security.rs
crates/adapters/payment/tests/: payment_integration.rs  webhook_security_e2e.rs
crates/adapters/storage-mysql/: Cargo.toml
crates/adapters/storage-mysql/src/: audit_log.rs  bulk_attendance.rs  bulk_attendance.sql  connection.rs  connection_helpers.rs  error.rs  event_log.rs  idempotency.rs  lib.rs  outbox.rs  schema.rs  storage.rs  transaction.rs
crates/adapters/storage-mysql/tests/: outbox_e2e.rs  schema_e2e.rs
crates/adapters/storage-postgres/: Cargo.toml
crates/adapters/storage-postgres/src/: audit_log.rs  bulk_attendance.rs  bulk_attendance.sql  connection.rs  connection_helpers.rs  ddl.rs  error.rs  event_log.rs  idempotency.rs  lib.rs  outbox.rs  schema.rs  storage.rs  transaction.rs
crates/adapters/storage-postgres/tests/: idempotency_e2e.rs  outbox_e2e.rs  school_id_indexes_e2e.rs
crates/adapters/storage-sqlite/: Cargo.toml
crates/adapters/storage-sqlite/src/: audit_log.rs  bulk_attendance.rs  bulk_attendance.sql  connection.rs  error.rs  event_log.rs  idempotency.rs  lib.rs  outbox.rs  schema.rs  storage.rs  transaction.rs  util.rs
crates/adapters/storage-sqlite/tests/: outbox_e2e.rs
crates/adapters/storage-surrealdb/: Cargo.toml
crates/adapters/storage-surrealdb/src/: audit.rs  connection.rs  error.rs  event_log.rs  idempotency.rs  lib.rs  outbox.rs  schema.rs  storage.rs  stubs.rs  transaction.rs
crates/adapters/storage-surrealdb/tests/: outbox_e2e.rs
crates/assessment/: Cargo.toml
crates/attendance/: Cargo.toml
crates/audit/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cli/: Cargo.toml
crates/core/engine-core/: Cargo.toml
crates/core/engine-core/src/: query.rs
crates/core/query-derive/: Cargo.toml
crates/core/storage/: Cargo.toml
crates/core/storage/src/: lib.rs
crates/cross-cutting/audit/: Cargo.toml  README.md
crates/cross-cutting/audit/src/: errors.rs  events.rs  lib.rs  query.rs  redactor.rs  retention.rs  sink.rs  writer.rs
crates/cross-cutting/audit/tests/: audit_e2e.rs
crates/cross-cutting/dispatcher/: Cargo.toml
crates/cross-cutting/dispatcher/src/: dispatcher.rs  lib.rs
crates/cross-cutting/dispatcher/tests/: forbidden_rejection.rs
crates/cross-cutting/events-domain/: Cargo.toml
crates/cross-cutting/events-domain/src/: aggregate.rs  commands.rs  entities.rs  errors.rs  events.rs  lib.rs  query.rs  repository.rs  services.rs  value_objects.rs
crates/cross-cutting/events-domain/tests/: assign_incident.rs  calendar_setting.rs  holiday.rs  incident_comment.rs  weekend.rs  workflows.rs
crates/educore/: Cargo.toml
crates/educore/src/: command_handle.rs  dispatch.rs  lib.rs  subscribers.rs
crates/educore/tests/: consumer_e2e.rs
crates/events/: Cargo.toml
crates/events-domain/: Cargo.toml
crates/facilities/: Cargo.toml
crates/facilities/src/: lib.rs
crates/notify/: Cargo.toml
crates/operations/: README.md
crates/payment/: Cargo.toml
crates/platform/: Cargo.toml
crates/rbac/: Cargo.toml
crates/smsengine/: Cargo.toml
crates/smsengine/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
docs/: VERIFICATION-BUILDER-PROMPT.md  architecture.md  build-plan.md  code-standards.md  coverage.toml  library-docs.md  progress-tracker.md  project-overview.md  query_layer.md
docs/audit_reports/: 01-audit-domains.md  02-audit-cross-cutting.md  03-audit-adapters.md  05-audit-documentation.md  07-audit-workflows.md  README.md  academic-invariant-checklist.md  finance-invariant-checklist.md  hr-invariant-checklist.md  loadtest_baseline.md  rbac-spec-map.toml  security_review.md  stub_vs_implementation.md
docs/commands/: academic.md  assessment.md  attendance.md  cms.md  communication.md  documents.md  hr.md  (+8 more)
docs_guidlines/: PROMPT.md  execution_guidlines.md  query_layer.md  query_optimze.md  system.md
graphify-out/: .graphify_chunk_docs_update.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
migrations/: 0001_academic.sql  0002_assessment.sql  0003_attendance.sql  0004_cms.sql  0005_communication.sql  0006_documents.sql  0007_events.sql  0008_facilities.sql  0009_finance.sql  0010_hr.sql  0011_library.sql  0012_ops.sql  0013_rbac.sql  0014_platform.sql  0015_settings.sql  README.md
scripts/: enumerate-spec-coverage.py  update-roadmap.py
(+903 files in other folders)
