[workspace]
resolver = "2"
# The 34 crates are organized into 5 tiers under `crates/`:
#   crates/infra/*           — infrastructure (3 crates: core, query-derive, storage)
#   crates/cross-cutting/*  — cross-domain foundations (7 crates)
#   crates/domains/*        — 10 domain bounded contexts (10 crates)
#   crates/adapters/*       — port implementations (9 crates)
#   crates/tools/*          — dev tooling (4 crates)
#   crates/educore/       — umbrella (1 crate)
#
# Sub-workspace isolation (per the build plan) is enforced at the
# filesystem level: a domain crate in `crates/domains/` can only
# depend on crates in `crates/infra/`, `crates/cross-cutting/`, and
# other `crates/domains/`. The `educore-core::lint` sub-module
# verifies this at build time. See `docs/build-plan.md` § The
# No-Gaps Gates.
#
# We use glob patterns (not sub-workspaces) so that all 34 crates
# share a single `[workspace.dependencies]` and a single
# `[workspace.lints]` section, avoiding the duplication that
# sub-workspaces require.
members = [
    "crates/infra/*",
    "crates/cross-cutting/*",
    "crates/domains/*",
    "crates/adapters/*",
    "crates/tools/*",
    "crates/educore",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/educore/educore"
homepage = "https://educore.dev"
documentation = "https://docs.rs/educore"
readme = "README.md"
keywords = ["school", "domain-engine", "ddd", "multi-tenant", "education"]
categories = ["domain-modeling", "data-structures"]
publish = false

[workspace.dependencies]
# Umbrella
educore = { path = "crates/educore" }

# infra tier (infrastructure — no domain knowledge; was: core/ before 2026-06-09 rename)
educore-core = { path = "crates/infra/core" }
educore-query-derive = { path = "crates/infra/query-derive" }
educore-storage = { path = "crates/infra/storage" }

# cross-cutting tier (cross-domain foundations)
educore-platform = { path = "crates/cross-cutting/platform" }
educore-rbac = { path = "crates/cross-cutting/rbac" }
educore-events = { path = "crates/cross-cutting/events" }
educore-events-domain = { path = "crates/cross-cutting/events-domain" }
educore-settings = { path = "crates/cross-cutting/settings" }
educore-operations = { path = "crates/cross-cutting/operations" }
educore-audit = { path = "crates/cross-cutting/audit" }

# domains tier (the 14 domain crates — only a subset here; the rest
# live in crates/domains/Cargo.toml which is the sub-workspace manifest)
educore-academic = { path = "crates/domains/academic" }
educore-assessment = { path = "crates/domains/assessment" }
educore-attendance = { path = "crates/domains/attendance" }
educore-cms = { path = "crates/domains/cms" }
educore-communication = { path = "crates/domains/communication" }
educore-documents = { path = "crates/domains/documents" }
educore-facilities = { path = "crates/domains/facilities" }
educore-finance = { path = "crates/domains/finance" }
educore-hr = { path = "crates/domains/hr" }
educore-library = { path = "crates/domains/library" }

# adapters tier (port implementations)
educore-storage-postgres = { path = "crates/adapters/storage-postgres" }
educore-storage-mysql = { path = "crates/adapters/storage-mysql" }
educore-storage-sqlite = { path = "crates/adapters/storage-sqlite" }
educore-storage-surrealdb = { path = "crates/adapters/storage-surrealdb" }
educore-auth = { path = "crates/adapters/auth" }
educore-event-bus = { path = "crates/adapters/event-bus" }
educore-files = { path = "crates/adapters/files" }
educore-integrations = { path = "crates/adapters/integrations" }
educore-notify = { path = "crates/adapters/notify" }
educore-payment = { path = "crates/adapters/payment" }

# cross-cutting tier (sync engine — Phase 0 per ADR-018)
educore-sync = { path = "crates/cross-cutting/sync" }
educore-sync-inprocess = { path = "crates/cross-cutting/sync-inprocess" }

# tools tier (dev tooling, not in release)
educore-testkit = { path = "crates/tools/testkit" }
educore-storage-parity = { path = "crates/tools/storage-parity" }
educore-cli = { path = "crates/tools/cli" }
educore-sdk = { path = "crates/tools/sdk" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Identifiers and time
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
uuid = { version = ">=1.10, <1.23", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# NOTE: the `time` crate is intentionally not declared here.
# Per ADR-015 § "MSRV floor conflict resolution", the engine uses `chrono`
# instead of `time` (time 0.3.47 requires MSRV 1.88, which exceeds the 1.75 floor).
ulid = { version = "1.1", features = ["serde"] }

# Tracing and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing and crypto
argon2 = "0.5"
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }

# Property-based testing
# Pinned to the same line as educore-core's dev-dep (1.5.x).
# Phase 7 uses it for the finance double-entry property test.
proptest = "1.5"

# Money and decimal
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
rust_decimal_macros = "1.36"

# Regular expressions
regex = "1.10"
once_cell = "1.20"

# TLS (rustls only — never native-tls)
rustls = "0.23"
rustls-pemfile = "2.1"
rustls-webpki = "0.102"

# Bytes (for wire-format payloads in the storage port)
bytes = { version = "1", features = ["serde"] }

# SurrealDB — Phase 0 primary storage adapter per ADR-017.
# Pinned to the last pre-1.75 line. The crate is pre-1.0 and
# the latest dev line raises MSRV above the engine's 1.75
# floor; see ADR-015 § "surrealdb" for the rationale.
surrealdb = { version = "2", default-features = false, features = ["kv-mem", "rustls"] }

# HTTP (for adapters)
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# SQL adapters — multi-dialect (PostgreSQL, MySQL, SQLite)
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "json", "uuid", "chrono", "rust_decimal", "mysql", "postgres", "sqlite"] }

# MySQL native driver
# `mysql_async` 0.34 + `flate2` 1.1 changed: the default zlib backend was
# removed, and `mysql_async` does not enable one itself. The `educore-storage-mysql`
# adapter (the only consumer of `mysql_async` in the workspace) pulls `flate2`
# in as a direct dep with the `zlib-rs` feature, so cargo's feature unification
# applies the same backend to `mysql_async`'s transitive use. `zlib-rs` is
# pure-Rust and cross-compile-safe (no C build deps).
mysql_async = { version = "0.34", default-features = false, features = ["rustls-tls"] }

# zlib backend selector for flate2 1.1+. Used by `mysql_async` transitively.
# Exposed here so the storage-mysql crate can depend on it directly and
# cargo's feature unification propagates the selection to the mysql_async
# dep tree. We use the `rust_backend` feature (miniz_oxide, pure Rust)
# because it's the cross-compile-safe choice with no C build deps.
# Note: `flate2/zlib-rs` requires zlib-rs ^0.6.0 which is not on crates.io
# yet; `rust_backend` is the more conservative pick for now.
# See ADR-015 § "MSRV floor conflict resolution".
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }

# SurrealDB and MongoDB adapters are deferred to a future release.
# See docs/ports/storage.md#future-storage-backends for the rationale.
# The dependencies below are intentionally not declared in the
# workspace. Consumers who need them must add them in their own
# Cargo.toml and implement the StorageAdapter trait in-tree.

# File storage
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
aws-sdk-s3 = { version = "1.55", features = ["behavior-version-latest"] }

# Email
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
lettre = { version = "0.10", default-features = false, features = ["rustls-tls", "tokio1-native-tls"] }

# Validation
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
validator = { version = "0.19", features = ["derive"] }

# Collections
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
indexmap = { version = "2.5", features = ["serde"] }

# Derive helpers
derive_more = { version = "1.0", features = ["full"] }

# Procedural macro deps
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Config / dotenv
dotenvy = "0.15"

# Logging init
env_logger = "0.11"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[profile.test]
opt-level = 0
debug = true

# Workspace lints — fail on warnings
[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
cast_sign_loss = "deny"
unnecessary_wraps = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
