[package]
name = "smsengine-assessment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Exams, marks registers, results, report cards, online exams, seat plans, admit cards."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-platform = { workspace = true }
smsengine-rbac = { workspace = true }
smsengine-events = { workspace = true }
smsengine-academic = { workspace = true }
smsengine-settings = { workspace = true }

