[package]
name = "smsengine-attendance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Student, subject, staff, and exam attendance, bulk import, absence detection."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-platform = { workspace = true }
smsengine-rbac = { workspace = true }
smsengine-events = { workspace = true }
smsengine-academic = { workspace = true }
smsengine-settings = { workspace = true }

