[package]
name = "smsengine-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication port, local-password, OAuth2, SAML, JWT adapter implementations."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-platform = { workspace = true }
smsengine-rbac = { workspace = true }
smsengine-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

