[package]
name = "educore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Educore umbrella crate providing the engine facade and prelude."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-rbac = { workspace = true }
educore-settings = { workspace = true }
educore-events = { workspace = true }
educore-academic = { workspace = true }
educore-assessment = { workspace = true }
educore-attendance = { workspace = true }
educore-finance = { workspace = true }
educore-hr = { workspace = true }
educore-library = { workspace = true }
educore-facilities = { workspace = true }
educore-communication = { workspace = true }
educore-events-domain = { workspace = true }
educore-documents = { workspace = true }
educore-cms = { workspace = true }
educore-storage = { workspace = true }
educore-operations = { workspace = true }
educore-storage-postgres = { workspace = true }
educore-storage-mysql = { workspace = true }
educore-storage-sqlite = { workspace = true }
educore-storage-surrealdb = { workspace = true }
educore-storage-parity = { workspace = true }
educore-auth = { workspace = true }
educore-notify = { workspace = true }
educore-payment = { workspace = true }
educore-files = { workspace = true }
educore-event-bus = { workspace = true }
educore-integrations = { workspace = true }
educore-audit = { workspace = true }
educore-testkit = { workspace = true }
educore-sdk = { workspace = true }
educore-cli = { workspace = true }
educore-query-derive = { workspace = true }
educore-sync = { workspace = true, optional = true }
educore-sync-inprocess = { workspace = true, optional = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
# Sync engine port + in-process reference adapter (ADR-018 § 4).
# Enable to include `educore_sync` and `educore_sync_inprocess` plus their
# umbrella re-exports. Default build excludes the sync surface entirely.
sync = ["dep:educore-sync", "dep:educore-sync-inprocess"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
