[package]
name = "smsengine-payment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Payment port, cash, cheque, bank, gateway, wallet adapter implementations."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-platform = { workspace = true }
smsengine-events = { workspace = true }
smsengine-finance = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

