[package]
name = "smsengine-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-tenancy substrate: schools, users, OTP, courses, modules, plugins."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-events = { workspace = true }

