[package]
name = "smsengine-storage-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference SQLite storage adapter for embedded deployments."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-storage = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

