[package]
name = "educore-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication port, local-password, OAuth2, SAML, JWT adapter implementations."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-rbac = { workspace = true }
educore-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
# A.3a: HMAC-SHA256 sign + verify for the JwtAuthProvider reference impl.
jsonwebtoken = { workspace = true }
# A.3a: `Serialize` / `Deserialize` derives for `JwtClaims`.
serde = { workspace = true }
# A.3a: parse `sid` / `sub` / `schools` / `roles` / `active_school`
# claim strings as UUIDv7 into typed identifiers.
uuid = { workspace = true }
# A.3a: convert JWT iat/exp (i64 unix seconds) to `Timestamp` (chrono-backed).
chrono = { workspace = true }
# A.3a: default 32-byte signing key for `JwtAuthProviderBuilder::new`.
rand = { workspace = true }
# A.3b: port-driven repository traits (`OAuthAccessTokenRepository`,
# `OAuthClientRepository`, `PasswordResetRepository`,
# `MigrationRepository`) for the `InMemoryOAuthStore` reference impl.
educore-operations = { workspace = true }
# A.3b: `AuditAction` enum re-exported into `oauth_store::audit_action_for_op`.
educore-audit = { workspace = true }
# A.4: Argon2id default-params password hashing + verification for
# `PasswordService::hash_password` / `verify_password` / `needs_rehash`.
argon2 = { workspace = true }
# A.7 (QW-7): emit a warning when JWT_SECRET is unset and we fall back
# to a randomly generated key in debug builds. tracing is the workspace's
# standard logging facade.
tracing = { workspace = true }
# PORT-AUTH-APIKEY: HMAC-SHA256 for the constant-time digest comparison
# used by `ApiKeyAuthProvider::verify_key`.
hmac = { workspace = true }
sha2 = { workspace = true }
# PORT-AUTH-APIKEY: `futures::executor::block_on` for synchronous tests
# that exercise the async `AuthProvider` trait.
futures = { workspace = true }

