[package]
name = "educore-event-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Event bus port, in-process, NATS, Redis Streams, Kafka adapters."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

